[build-system]
requires = ["setuptools"] #, "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "routermonitor"
version = "3.1"
description = "Watch for new DHCP clients on your LAN"
readme = "README.md"
requires-python = ">=3.6"       # Centos 7 uses 3.6.8
authors = [ {name = "Chris Nelson", email = "github@cjnaz.com"} ]
license = {file = "LICENSE.txt"}
dependencies = [
    'cjnfuncs >= 2.0.2',
    'importlib-metadata; python_version<"3.8"',
    'requests',
    'lxml',
    ]
classifiers = [                 # https://pypi.org/classifiers/
    "Topic :: System :: Networking :: Monitoring",
    ]


[project.scripts]
routermonitor = "routermonitor.routermonitor:cli"


[project.urls]
repository = "https://github.com/cjnaz/routermonitor"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["deployment_files/*"]