[project]
name = 'routermonitor'
version = '4.0b4'
    # 4.0b4 - Doc work, code tuning, search --list-dhcp-server, MIMAPI blank hostname bug, capture device
    # 4.0b3 - Sources and Mode switch.  Deleted dd-wrt support.  Cleanup
    # 4.0b2 - cleanup
    # 4.0b1 - pfSense+ Nexus MIM contoller API, pfSense_pagescrape, pfSense_unofficialV2 modes functional
    # 3.1.1 - pyproject.toml tuning
description = 'Watch for new DHCP clients on your LAN'
readme = 'README.md'
requires-python = '>=3.9'       # RHEL 9 uses py3.9
authors = [ {name = 'Chris Nelson', email = 'github@cjnaz.com'} ]
license = 'MIT'
dependencies = [
    'cjnfuncs >= 3.0.1',
    'requests',
    'lxml',
    ]
keywords = ['cjnaz', 'lan', 'router', 'pfsense', 'dd-wrt', 'monitor']
classifiers = [                 # https://pypi.org/classifiers/
    'Topic :: System :: Networking :: Monitoring',
    ]


[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project.scripts]
routermonitor = 'routermonitor.routermonitor:cli'


[project.urls]
repository = 'https://github.com/cjnaz/routermonitor'


[tool.setuptools.packages.find]
where = ['src']


[tool.setuptools.package-data]
'*' = ['deployment_files/*']